--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ciel",
-  "short_name": "Ciel",
-  "description": "Ciel (Zou Xiaohan)",
+  "name": "Alice Lab",
+  "short_name": "Alice Lab",
+  "description": "Alice Lab",
   "icons": [{
     "src": "icons/128.png",
     "sizes": "128x128",
