--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Alice Lab是一个致力于AI的研究组织
 keyword: "formalization"
 url: "https://alicegame1.github.io"      # your host, for absolute URL
 baseurl: ""                                         # for example, '/blog' if your blog hosted on 'host/blog'
-avatar: "img/avatar.png"                            # the avatar showing on the homepage
+avatar: "img/avatar.jpg"                            # the avatar showing on the homepage
 
 
 # GitHub repository (if the site is hosted by GitHub)
@@ -119,7 +119,7 @@ comment:
   provider: false # false (default), "disqus", "gitalk", "valine"
 
   # Disqus settings
-  disqus_username: Ciel
+  disqus_username: Alice Lab
 
   # Gitalk settings
   # https://github.com/gitalk/gitalk
@@ -129,7 +129,7 @@ comment:
     repo: gitalk-comments
     owner: This-is-an-Apple
     admin:
-      - Ciel
+      - Alice Lab
 
   # Valine settings
   # https://valine.js.org/
